--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item active"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
-                <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
+                <li class="pure-menu-item"><a href="innovate.html" class="pure-menu-link">Innovate</a></li>
+                <!--<li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
                 <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
-                <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>
+                <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>-->
+                <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
@@ -105,7 +107,7 @@
                 </div>
             </div>
         </div>
-        </div>
+    </div>
     </div>
 
     <!-- section 2: Explain apps-->
@@ -127,12 +129,13 @@
             </a>
         </div>
 
+        
         <div class="pure-u-1 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appMarvel">
-                <div class="card-image img-marvel"></div>
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appIdeascale">
+                <div class="card-image img-ideascale"></div>
                 <div class="card-info">
-                    <div class="card-title">Marvel</div>
-                    <div class="card-artist">Protoyping and Mockups</div>
+                    <div class="card-title">Ideascale</div>
+                    <div class="card-artist">Crowdsourcing</div>
                 </div>
             </a>
         </div>
@@ -257,17 +260,17 @@
     </div>
 
     <!-- Modal App Marvel -->
-    <div class="modal fade" id="appMarvel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal fade" id="appIdeascale" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog modal-app-card" role="document">
             <div class="modal-content">
-                <div class="card-image img-marvel-2"></div>
+                <div class="card-image img-ideascale-2"></div>
                 <div class="modal-body">
-                    <h3>Marvel App</h3>
+                    <h3>Ideascale</h3>
                     <h6>What is it and how can it help you?</h6>
-                    <p>Simple design, prototyping and collaboration</p>
-                    <p>Create screens directly in Marvel or add your images from Sketch or Photoshop. You can even sync designs from your cloud storage! Our simple editor allows you to link all your designs together in a jiffy, then add gestures and transitions to make your prototype feel just like a real app or website.</p>
-                    <p>Give it a try, you will be able to prototype your ideas quickly!</p>
-                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="https://marvelapp.com/support/" target="_blank">app's support page</a>.</p>
+                    <p>Innovating together.</p>
+                    <p>IdeaScale is an innovation management platform that uses crowdsourcing to help you find and develop the next big thing. Let your network share feedback and ideas from anywhere. You’ll find answers to questions you never even thought to ask.</p>
+                    <p>Give it a try, let's put our ideas together!</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="http://support.ideascale.com" target="_blank">app's support page</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
