--- a/innovate.html
+++ b/innovate.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>InnoLAB 2.0 Share</title>
+    <title>InnoLAB 2.0 Build</title>
 
     <link rel="stylesheet" href="pure.css">
     <link rel="stylesheet" href="grids-responsive.css">
@@ -45,8 +45,8 @@
                 <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
                 <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
                 <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
-                <li class="pure-menu-item active"><a href="share.html" class="pure-menu-link">Share</a></li>
-                <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
+                <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>
+                <li class="pure-menu-item active"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
@@ -54,29 +54,26 @@
             </ul>
         </div>
     </div>
+    <div style="position:fixed;margin-top:60px;background-color:#fff;width:100%;padding:0 15px;">
+        <ul>
+            <li><a href="#!">Item 1</a></li>
+        </ul>
+    </div>
     <!-- jumbotron -->
-    <div class="j1 img-j5">
+    <div class="j1 img-j1" style="padding-top:140px;">
         <div class="text-block-1">
             <h3 class="baby-blue">Innolab</h3>
-            <h1>Share</h1>
+            <h1>Innovate</h1>
 
         </div>
     </div>
 
     <div class="pure-g section-3">
-        <!-- section 1: Ready to protoype blurb-->
-        <div class="pure-u-1 text-block-1">
-            <h4>Is your prototype successful?</h4>
-            <p>We can rapidly develop your prototype into final production.</p>
-<p>If your prototype shows to benefit your intended audience, we will work with you to make it a fully-fledged departmental offering! Otherwise, if your prototype didn’t succeed, No problem! We would like to write a failure report with you for lessons learned.
-If you have any questions, contact Us! Or view How it Works!
-</p>
-        </div>
-
-        <div class="pure-u-1 text-block-1">
-            <hr class="subtle">
-            <h6>Let's publish and share our app!</h6>
-            <a href="contact.html" class="pure-button pure-button-blue" style="">Request a review</a>
+        <!-- section 1: start a conversation-->
+        <div class="pure-u-1 text-block-3">
+            <h4>Test page</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
         </div>
     </div>
 
@@ -116,6 +113,7 @@ If you have any questions, contact Us! Or view How it Works!
             });
         })(this, this.document);
     </script>
+    <script id="dsq-count-scr" src="//innolab-discussions.disqus.com/count.js" async></script>
 </body>
 
 </html>
