--- a/toolkit.html
+++ b/toolkit.html
@@ -46,6 +46,7 @@
                 <li class="pure-menu-item active"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
                 <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
                 <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>
+                <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
@@ -78,6 +79,26 @@
                 <div class="card-info">
                     <div class="card-title">Watson</div>
                     <div class="card-artist">Big Data Analytics</div>
+                </div>
+            </a>
+        </div>
+
+        <div class="pure-u-1 pure-u-md-1-3">
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appTableau">
+                <div class="card-image img-tableau"></div>
+                <div class="card-info">
+                    <div class="card-title">Tableau</div>
+                    <div class="card-artist">Big Data Analytics</div>
+                </div>
+            </a>
+        </div>
+
+        <div class="pure-u-1 pure-u-md-1-3">
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appIdeascale">
+                <div class="card-image img-ideascale"></div>
+                <div class="card-info">
+                    <div class="card-title">Ideascale</div>
+                    <div class="card-artist">Crowdsourcing</div>
                 </div>
             </a>
         </div>
@@ -123,12 +144,9 @@
         </div>
 
         <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appPlasticity">
-                <div class="card-image img-plasticity"></div>
-                <div class="card-info">
-                    <div class="card-title">Plasticity</div>
-                    <div class="card-artist">Happiness metrics</div>
-                </div>
+            <a class="card add-new" href="contact.html">
+                <h2>+</h2>
+                <h6>Suggest a tool</h6>
             </a>
         </div>
 
@@ -274,6 +292,48 @@
                     <p>Organizational, behaviorial and positive psycchology is built into every aspect of the Plasticity platform.</p>
                     <p>Give it a try, become happier at work!</p>
                     <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="http://www.plasticitylabs.com" target="_blank">app's support page</a>.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal App Ideascale -->
+    <div class="modal fade" id="appIdeascale" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-app-card" role="document">
+            <div class="modal-content">
+                <div class="card-image img-ideascale-2"></div>
+                <div class="modal-body">
+                    <h3>Ideascale</h3>
+                    <h6>What is it and how can it help you?</h6>
+                    <p>Innovating together.</p>
+                    <p>IdeaScale is an innovation management platform that uses crowdsourcing to help you find and develop the next big thing. Let your network share feedback and ideas from anywhere. You’ll find answers to questions you never even thought to ask.</p>
+                    <p>Give it a try, let's put our ideas together!</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="http://support.ideascale.com" target="_blank">app's support page</a>.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal App Tableau -->
+    <div class="modal fade" id="appTableau" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-app-card" role="document">
+            <div class="modal-content">
+                <div class="card-image img-tableau-2"></div>
+                <div class="modal-body">
+                    <h3>Tableau</h3>
+                    <h6>What is it and how can it help you?</h6>
+                    <p>Understand data easily and elegantly.</p>
+                    <p>Open data and explore it with Tableau Desktop Public Edition. Drag & Drop. Create stunning visualizations with ease. Share your visualizations with the world via social media. </p>
+                    <p>Give it a try, see how you will wow your next audience!</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="http://www.tableau.com/about/contact#contact_sales" target="_blank">app's support page</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
