--- a/innovate.html
+++ b/innovate.html
@@ -43,10 +43,11 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
-                <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
+                <li class="pure-menu-item active"><a href="innovate.html" class="pure-menu-link">Innovate</a></li>
+                <!--<li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
                 <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
-                <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>
-                <li class="pure-menu-item active"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
+                <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>-->
+                <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
@@ -55,9 +56,19 @@
         </div>
     </div>
     <div style="position:fixed;margin-top:60px;background-color:#fff;width:100%;padding:0 15px;">
-        <ul>
-            <li><a href="#!">Item 1</a></li>
-        </ul>
+        <div class="pure-g">
+            <div class="pure-u-1-2">
+                <p>Innovate</p>
+
+            </div>
+            <div class="pure-u-1-2">
+                <ul>
+                    <li><a href="#!">Item 1</a></li>
+                    <li><a href="#!">Item 1</a></li>
+
+                </ul>
+            </div>
+        </div>
     </div>
     <!-- jumbotron -->
     <div class="j1 img-j1" style="padding-top:140px;">
