continue working on sec nav

--- a/innovate.html
+++ b/innovate.html
@@ -55,23 +55,23 @@
             </ul>
         </div>
     </div>
-    <div style="position:fixed;margin-top:60px;background-color:#fff;width:100%;padding:0 15px;">
+    <div class="nav-secondary">
         <div class="pure-g">
             <div class="pure-u-1-2">
-                <p>Innovate</p>
-
+                <p><b>INNOVATE</b></p>
             </div>
             <div class="pure-u-1-2">
-                <ul>
-                    <li><a href="#!">Item 1</a></li>
-                    <li><a href="#!">Item 1</a></li>
-
+                <ul class="list-inline">
+                    <li><a href="toolkit.html">Explore</a></li>
+                    <li><a href="build.html">Build</a></li>
+                    <li><a href="share.html">Share</a></li>
+                    <li><a href="#!">Visit</a></li>
                 </ul>
             </div>
         </div>
     </div>
     <!-- jumbotron -->
-    <div class="j1 img-j1" style="padding-top:140px;">
+    <div class="j1 img-j1 j1-secondary">
         <div class="text-block-1">
             <h3 class="baby-blue">Innolab</h3>
             <h1>Innovate</h1>
