updated content layout

--- a/get-started.html
+++ b/get-started.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>InnoLAB 2.0 Build</title>
+    <title>InnoLAB 2.0 Get started</title>
 
     <link rel="stylesheet" href="pure.css">
     <link rel="stylesheet" href="grids-responsive.css">
@@ -43,7 +43,7 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
-                <li class="pure-menu-item active"><a href="innovate.html" class="pure-menu-link">Innovate</a></li>
+                <li class="pure-menu-item active"><a href="get-started.html" class="pure-menu-link">Get started</a></li>
                 <!--<li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
                 <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
                 <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>-->
@@ -57,24 +57,23 @@
     </div>
     <div class="nav-secondary">
         <div class="pure-g">
-            <div class="pure-u-1-2">
+            <div class="pure-u-3-4">
                 <p><b>INNOVATE</b></p>
             </div>
-            <div class="pure-u-1-2">
+            <div class="pure-u-1-4">
                 <ul class="list-inline">
                     <li><a href="toolkit.html">Explore</a></li>
                     <li><a href="build.html">Build</a></li>
                     <li><a href="share.html">Share</a></li>
-                    <li><a href="#!">Visit</a></li>
                 </ul>
             </div>
         </div>
     </div>
     <!-- jumbotron -->
-    <div class="j1 img-j1 j1-secondary">
+    <div class="j1 img-j7 j1-secondary">
         <div class="text-block-1">
             <h3 class="baby-blue">Innolab</h3>
-            <h1>Innovate</h1>
+            <h1>Get started</h1>
 
         </div>
     </div>
@@ -82,9 +81,26 @@
     <div class="pure-g section-3">
         <!-- section 1: start a conversation-->
         <div class="pure-u-1 text-block-3">
-            <h4>Test page</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            <h4>Explore</h4>
+            <p>Have a digital innovative idea? Start exploring our Toolkit.</p>
+            <p>Access a series of tools to begin exploring digital innovation. We have tools for data analytics, mind mapping, surveys and more to come. Click Explore Now to learn about our Toolkit</p>
+            <p>Give it a try, see how far you can elevate your ideas!</p>
+        </div>
+        <div class="pure-u-1 text-block-3">
+            <hr class="subtle">
+        </div>
+        <div class="pure-u-1 text-block-3">
+            <h4>Build</h4>
+            <p>Want to prototype an innovative idea? Maybe we can help!</p>
+            <p>We can work with you to develop your innovative idea into a prototype. Click Build Now for to learn about our submission criteria.
+        </div>
+        <div class="pure-u-1 text-block-3">
+            <hr class="subtle">
+        </div>
+        <div class="pure-u-1 text-block-3">
+            <h4>Share</h4>
+            <p>Think your prototype is department worthy? Let’s share it with others.</p>
+            <p>Let’s turn your prototype it into a product. Click Share Now, to learn more about our process.</p>
         </div>
     </div>
 
