--- a/visit.html
+++ b/visit.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>InnoLAB 2.0 Build</title>
+    <title>InnoLAB 2.0 Visit</title>
 
     <link rel="stylesheet" href="pure.css">
     <link rel="stylesheet" href="grids-responsive.css">
@@ -56,7 +56,7 @@
     <div class="j1 img-j6">
         <div class="text-block-1">
             <h3 class="baby-blue">Innolab</h3>
-            <h1>Discuss</h1>
+            <h1>Visit</h1>
 
         </div>
     </div>
@@ -64,32 +64,15 @@
     <div class="pure-g section-3">
         <!-- section 1: start a conversation-->
         <div class="pure-u-1 text-block-3">
-            <h4>Start a conversation</h4>
-            <p></p>
-            <div id="disqus_thread"></div>
-            <script>
-                /**
-                 * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                 * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-                 */
-                /*
-                var disqus_config = function () {
-                this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
-                this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-                };
-                */
-                (function () { // DON'T EDIT BELOW THIS LINE
-                    var d = document,
-                        s = d.createElement('script');
+            <h4>Visit us</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
-                    s.src = '//innolabdiscussions.disqus.com/embed.js';
+            <h6 class="baby-blue">Want to book it?</h6>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+        </div>
 
-                    s.setAttribute('data-timestamp', +new Date());
-                    (d.head || d.body).appendChild(s);
-                })();
-            </script>
-            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-
+        <div class="pure-u-1 text-block-1">
+            <a href="contact.html" class="pure-button pure-button-blue" style="">Book the Lab</a>
         </div>
     </div>
 
