--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item active"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
-                <li class="pure-menu-item"><a href="innovate.html" class="pure-menu-link">Innovate</a></li>
-                <!--<li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
-                <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
-                <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>-->
+                <li class="pure-menu-item"><a href="get-started.html" class="pure-menu-link">Get started</a></li>
+                <li class="pure-menu-item"><a href="visit.html" class="pure-menu-link">Visit</a></li>
                 <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
@@ -59,9 +57,9 @@
     <!-- jumbotron -->
     <div class="j1 img-j1" data-stellar-background-ratio="0.8">
         <div class="text-block-1">
-            <h3 class="baby-blue">Innolab</h3>
-            <h1>Explore. Build. Publish.</h1>
-            <p class="white">Hello! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who are pilot testing an InnoLAB to help Global Affairs Employees foster small-scale, technology centric solutions which change the way our department works.</p>
+            <h3 class="baby-blue">InnoLab</h3>
+            <h1>Explore. Build. Share.</h1>
+            <p class="white">Hello! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who are pilot testing an InnoLab to help Global Affairs Employees foster small-scale, technology centric solutions which change the way our department works.</p>
             <a href="toolkit.html" class="pure-button pure-button-blue button-xlarge link">Get started</a>
         </div>
     </div>
@@ -102,7 +100,7 @@
                 <div class="album-info">
                     <div class="album-title">
                         <h1>Share</h1></div>
-                    <h2 class="album-artist">Think your prototype is department worthy?<br>Let’s share it with others..</h2>
+                    <h2 class="album-artist">Think your prototype is department worthy?<br>Let’s share it with others.</h2>
                     <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#share">About Sharing</a>
                 </div>
             </div>
