major updates to layout, added visit page, worked on css for secondary nav

--- a/share.html
+++ b/share.html
@@ -43,9 +43,8 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
-                <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
-                <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
-                <li class="pure-menu-item active"><a href="share.html" class="pure-menu-link">Share</a></li>
+                <li class="pure-menu-item active"><a href="get-started.html" class="pure-menu-link">Get started</a></li>
+                <li class="pure-menu-item"><a href="visit.html" class="pure-menu-link">Visit</a></li>
                 <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
@@ -54,8 +53,22 @@
             </ul>
         </div>
     </div>
+    <div class="nav-secondary">
+        <div class="pure-g">
+            <div class="pure-u-1 pure-u-sm-2-3 hidden-xs">
+                <p><a href="get-started.html"><b>GET STARTED</b></a></p>
+            </div>
+            <div class="pure-u-1 pure-u-sm-1-3">
+                <ul class="list-inline">
+                    <li><a href="toolkit.html">Explore</a></li>
+                    <li><a href="build.html">Build</a></li>
+                    <li><a class="active" href="share.html">Share</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <!-- jumbotron -->
-    <div class="j1 img-j5">
+    <div class="j1 img-j5 j1-secondary">
         <div class="text-block-1">
             <h3 class="baby-blue">Innolab</h3>
             <h1>Share</h1>
@@ -68,9 +81,8 @@
         <div class="pure-u-1 text-block-1">
             <h4>Is your prototype successful?</h4>
             <p>We can rapidly develop your prototype into final production.</p>
-<p>If your prototype shows to benefit your intended audience, we will work with you to make it a fully-fledged departmental offering! Otherwise, if your prototype didn’t succeed, No problem! We would like to write a failure report with you for lessons learned.
-If you have any questions, contact Us! Or view How it Works!
-</p>
+            <p>If your prototype shows to benefit your intended audience, we will work with you to make it a fully-fledged departmental offering! Otherwise, if your prototype didn’t succeed, No problem! We would like to write a failure report with you for lessons learned. If you have any questions, contact Us! Or view How it Works!
+            </p>
         </div>
 
         <div class="pure-u-1 text-block-1">
