--- a/get-started.html
+++ b/get-started.html
@@ -44,9 +44,7 @@
                 <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
                 <li class="pure-menu-item active"><a href="get-started.html" class="pure-menu-link">Get started</a></li>
-                <!--<li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
-                <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
-                <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>-->
+                <li class="pure-menu-item"><a href="visit.html" class="pure-menu-link">Visit</a></li>
                 <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
@@ -57,12 +55,12 @@
     </div>
     <div class="nav-secondary">
         <div class="pure-g">
-            <div class="pure-u-3-4">
-                <p><b>INNOVATE</b></p>
+            <div class="pure-u-1 pure-u-sm-2-3 hidden-xs">
+                <p><a href="get-started.html"><b>GET STARTED</b></a></p>
             </div>
-            <div class="pure-u-1-4">
+            <div class="pure-u-1 pure-u-sm-1-3">
                 <ul class="list-inline">
-                    <li><a href="toolkit.html">Explore</a></li>
+                    <li class="active"><a href="toolkit.html">Explore</a></li>
                     <li><a href="build.html">Build</a></li>
                     <li><a href="share.html">Share</a></li>
                 </ul>
