--- a/toolkit.html
+++ b/toolkit.html
@@ -43,9 +43,8 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
-                <li class="pure-menu-item active"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
-                <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
-                <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>
+                <li class="pure-menu-item active"><a href="get-started.html" class="pure-menu-link">Get started</a></li>
+                <li class="pure-menu-item"><a href="visit.html" class="pure-menu-link">Visit</a></li>
                 <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
@@ -54,8 +53,22 @@
             </ul>
         </div>
     </div>
+    <div class="nav-secondary">
+        <div class="pure-g">
+            <div class="pure-u-1 pure-u-sm-2-3 hidden-xs">
+                <p><a href="get-started.html"><b>GET STARTED</b></a></p>
+            </div>
+            <div class="pure-u-1 pure-u-sm-1-3">
+                <ul class="list-inline">
+                    <li><a  class="active" href="toolkit.html">Explore</a></li>
+                    <li><a href="build.html">Build</a></li>
+                    <li><a href="share.html">Share</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <!-- jumbotron -->
-    <div class="j1 img-j2">
+    <div class="j1 img-j2 j1-secondary">
         <div class="text-block-1">
             <h3 class="baby-blue">Innolab</h3>
             <h1>Explore</h1>
