--- a/visit.html
+++ b/visit.html
@@ -44,7 +44,8 @@
                 <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
                 <li class="pure-menu-item"><a href="get-started.html" class="pure-menu-link">Get started</a></li>
-                <li class="pure-menu-item active"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
+                <li class="pure-menu-item active"><a href="visit.html" class="pure-menu-link">Visit</a></li>
+                <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
