--- a/share.html
+++ b/share.html
@@ -31,7 +31,7 @@
     <div class="backdrop toggle-drawer"></div>
 
     <!-- pure horizontal menu -->
-    <div class="custom-menu-wrapper">
+    <div class="custom-menu-wrapper w-nav-secondary">
         <div class="pure-menu custom-menu custom-menu-top">
             <a href="index.html" class="pure-menu-heading custom-menu-brand">
                 <span class="fip-navbar"></span>
