added more CTA buttons for better UX and to guide user through process

--- a/get-started.html
+++ b/get-started.html
@@ -83,14 +83,16 @@
             <p>Have a digital innovative idea? Start exploring our Toolkit.</p>
             <p>Access a series of tools to begin exploring digital innovation. We have tools for data analytics, mind mapping, surveys and more to come. Click Explore Now to learn about our Toolkit</p>
             <p>Give it a try, see how far you can elevate your ideas!</p>
-        </div>
+            <a href="toolkit.html" class="pure-button pure-button-blue" style="">Explore the toolkit</a>
+        </div>s
         <div class="pure-u-1 text-block-3">
             <hr class="subtle">
         </div>
         <div class="pure-u-1 text-block-3">
             <h4>Build</h4>
             <p>Want to prototype an innovative idea? Maybe we can help!</p>
-            <p>We can work with you to develop your innovative idea into a prototype. Click Build Now for to learn about our submission criteria.
+            <p>We can work with you to develop your innovative idea into a prototype. Click Build Now for to learn about our submission criteria.</p>
+            <a href="build.html" class="pure-button pure-button-blue" style="">Request a meeting</a>
         </div>
         <div class="pure-u-1 text-block-3">
             <hr class="subtle">
@@ -99,6 +101,7 @@
             <h4>Share</h4>
             <p>Think your prototype is department worthy? Let’s share it with others.</p>
             <p>Let’s turn your prototype it into a product. Click Share Now, to learn more about our process.</p>
+            <a href="share.html" class="pure-button pure-button-blue" style="">Request a meeting</a>
         </div>
     </div>
 
