--- a/how-it-works.html
+++ b/how-it-works.html
@@ -109,8 +109,10 @@
             </ul>
         </div>
 
-        <div class="pure-u-1 text-block-3">
+        <div class="pure-u-1 text-block-1">
             <hr class="subtle">
+            <h6>Are you ready?</h6>
+            <a href="get-started.html" class="pure-button pure-button-blue" style="">Get started!</a>
         </div>
 
     </div>
