fixed minor typo (letter s)

--- a/get-started.html
+++ b/get-started.html
@@ -84,7 +84,7 @@
             <p>Access a series of tools to begin exploring digital innovation. We have tools for data analytics, mind mapping, surveys and more to come. Click Explore Now to learn about our Toolkit</p>
             <p>Give it a try, see how far you can elevate your ideas!</p>
             <a href="toolkit.html" class="pure-button pure-button-blue" style="">Explore the toolkit</a>
-        </div>s
+        </div>
         <div class="pure-u-1 text-block-3">
             <hr class="subtle">
         </div>
