change share to launch

--- a/get-started.html
+++ b/get-started.html
@@ -62,7 +62,7 @@
                 <ul class="list-inline">
                     <li class="active"><a href="toolkit.html">Explore</a></li>
                     <li><a href="build.html">Build</a></li>
-                    <li><a href="share.html">Share</a></li>
+                    <li><a href="share.html">Launch</a></li>
                 </ul>
             </div>
         </div>
@@ -98,9 +98,9 @@
             <hr class="subtle">
         </div>
         <div class="pure-u-1 text-block-3">
-            <h4>Share</h4>
+            <h4>Launch</h4>
             <p>Think your prototype is department worthy? Let’s share it with others.</p>
-            <p>Let’s turn your prototype it into a product. Click Share Now, to learn more about our process.</p>
+            <p>Let’s turn your prototype it into a product. Request a meeting to learn more about our process.</p>
             <a href="share.html" class="pure-button pure-button-blue" style="">Request a meeting</a>
         </div>
     </div>
