--- a/how-it-works.html
+++ b/how-it-works.html
@@ -100,7 +100,7 @@
 
         <div class="pure-u-1 text-block-3">
             <!-- content here -->
-            <h6 class="baby-blue">Share</h6>
+            <h6 class="baby-blue">Launch</h6>
             <p class="margin-20-right">SID will maximize a fast-track delivery model to advance a functioning prototype to final product. The model would include:</p>
             <ul>
                 <li>Providing client support for navigating development process</li>
