--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="j1 img-j1" data-stellar-background-ratio="0.8">
         <div class="text-block-1">
             <h3 class="baby-blue">InnoLab</h3>
-            <h1>Explore. Build. Share.</h1>
+            <h1>Explore. Build. Launch.</h1>
             <p class="white">Hello! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who are pilot testing an InnoLab to help Global Affairs Employees foster small-scale, technology centric solutions which change the way our department works.</p>
             <a href="toolkit.html" class="pure-button pure-button-blue button-xlarge link">Get started</a>
         </div>
@@ -95,12 +95,12 @@
         </div>
         <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4">
             <div class="album-art img-publish">
-                <h4 class="album-image-title">Share</h4>
+                <h4 class="album-image-title">Launch</h4>
                 <div class="album-gradient"></div>
                 <div class="album-info">
                     <div class="album-title">
-                        <h1>Share</h1></div>
-                    <h2 class="album-artist">Think your prototype is department worthy?<br>Let’s share it with others.</h2>
+                        <h1>Launch</h1></div>
+                    <h2 class="album-artist">Think your prototype is department worthy?<br>Let’s launch it with others.</h2>
                     <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#share">About Sharing</a>
                 </div>
             </div>
@@ -201,21 +201,21 @@
         </div>
     </div>
 
-    <!-- Modal Share -->
+    <!-- Modal Launch -->
     <div class="modal fade" id="share" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog modal-black-card" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Share</h4>
+                    <h4 class="modal-title" id="myModalLabel">Launch</h4>
                 </div>
                 <div class="img-publish j1" style="height:240px"></div>
                 <div class="modal-body">
                     <h5>Your Product.</h5>
-                    <p>Let’s turn your prototype it into a product. Click Share Now, to learn more about our process.</p>
+                    <p>Let’s turn your prototype it into a product. Click Launch Now, to learn more about our process.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button onclick="window.location.href='share.html'" type="button" class="pure-button pure-button-primary">Share now</button>
+                    <button onclick="window.location.href='share.html'" type="button" class="pure-button pure-button-primary">Launch now</button>
                 </div>
             </div>
         </div>
