--- a/share.html
+++ b/share.html
@@ -62,7 +62,7 @@
                 <ul class="list-inline">
                     <li><a href="toolkit.html">Explore</a></li>
                     <li><a href="build.html">Build</a></li>
-                    <li><a class="active" href="share.html">Share</a></li>
+                    <li><a class="active" href="share.html">Launch</a></li>
                 </ul>
             </div>
         </div>
