--- a/build.html
+++ b/build.html
@@ -63,7 +63,7 @@
                 <ul class="list-inline">
                     <li><a href="toolkit.html">Explore</a></li>
                     <li><a class="active" href="build.html">Build</a></li>
-                    <li><a href="share.html">Share</a></li>
+                    <li><a href="share.html">Launch</a></li>
                 </ul>
             </div>
         </div>
